--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<p>Hello 大家好</p>
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="main.js" defer></script>
+    <title>Homepage of Jian</title>
+  </head>
+
+  <body>
+    <h1>Cheears, welcome to Jian's Homepage</h1>
+
+    <p>
+      这是一个段落文本。在文本中有一个 <span>span element</span> 并且还有一个
+      <a href="https://njstation.github.io/">链接</a>.
+    </p>
+
+    <p>这是第二段。</p>
+
+    <button>Try me</button>
+  </body>
+</html>
