--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <a href="https://njstation.github.io/">链接</a>.
     </p>
 
-    <p>这是第二段。</p>
+    <p>新疆旅行攻略:</p>
+     <iframe src="example.txt"></iframe>
 
+    <p>end</p>
     <button>Try me</button>
   </body>
 </html>
