--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
 
     <p>新疆旅行攻略:</p>
-     <iframe src="example.txt"></iframe>
+     <iframe src="xinjiang.txt"></iframe>
 
     <p>end</p>
     <button>Try me</button>
